--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,9 +5,16 @@ body {
 }
 
 #game-board {
+  position: relative; /* The game piece will be positioned relative to this container */
+  width: 300px;
+  height: 300px;
   border: 2px solid #000;
 }
 
 #game-piece {
+  position: absolute; /* This allows it to move within the game board */
+  width: 50px;
+  height: 50px;
+  background-color: #007bff;
   border-radius: 5px;
 }
