--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,3 +18,11 @@ body {
   background-color: #007bff;
   border-radius: 5px;
 }
+
+#target {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: #28a745;
+  border-radius: 5px;
+}
