--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,24 +5,25 @@ body {
 }
 
 #game-board {
-  position: relative; /* The game piece will be positioned relative to this container */
-  width: 300px;
-  height: 300px;
+  position: relative;
+  width: 250px;
+  height: 250px;
   border: 2px solid #000;
+  /* Grid will have 5 rows and 5 columns */
+}
+
+#game-piece, #target {
+  position: absolute;
+  width: 50px;  /* Each cell in the 5x5 grid is 50px by 50px */
+  height: 50px;
 }
 
 #game-piece {
-  position: absolute; /* This allows it to move within the game board */
-  width: 50px;
-  height: 50px;
   background-color: #007bff;
   border-radius: 5px;
 }
 
 #target {
-  position: absolute;
-  width: 50px;
-  height: 50px;
   background-color: #28a745;
   border-radius: 5px;
 }
