--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,26 +9,26 @@ footer {
   bottom: 0;
 }
 
+/* Define a 5x5 grid */
 #game-board {
-  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   width: 250px;
   height: 250px;
-  border: 2px solid #000;
-  /* Grid will have 5 rows and 5 columns */
+  border: 2px solid black;
+  margin: auto;
 }
 
-#game-piece, #target {
-  position: absolute;
-  width: 50px;  /* Each cell in the 5x5 grid is 50px by 50px */
-  height: 50px;
+.game-piece, .target {
+  width: 100%;
+  height: 100%;
 }
 
 #game-piece {
   background-color: #007bff;
-  border-radius: 5px;
 }
 
 #target {
   background-color: #28a745;
-  border-radius: 5px;
 }
