--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
-  background-image: url('../img/background-pattern.png');
+  background-color: darkslategray;
   background-size: cover;
 }
 
