--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ body {
 footer {
   background-color: darkslategray;
   position: center;
-  bottom: 0;
+  bottom: auto;
 }
 
 /* Define a 5x5 grid */
