--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,8 +28,12 @@ footer {
 
 #game-piece {
   background-color: #007bff;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #target {
   background-color: #28a745;
+  grid-row: 1;
+  grid-column: 1;
 }
