--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,12 +28,12 @@ footer {
 
 #game-piece {
   background-color: #007bff;
-  grid-row: playerPosition.row;
-  grid-column: 'playerPosition.col';
+  grid-row: 1;
+  grid-column: 1;
 }
 
 #target {
   background-color: #28a745;
-  grid-row: 'targetPosition.row';
-  grid-column: 'targetPosition.col';
+  grid-row: 3;
+  grid-column: 3;
 }
